# hermes

./: .gitignore  Dockerfile  README.md  dune  dune-project  hermes.opam  index.mld  run_experiments.sh  switch-ocaml
benchmarks/: AG01_3.1.onijn  AG01_3.10.onijn  AG01_3.12.onijn  AG01_3.13.onijn  AG01_3.15.onijn  AG01_3.16.onijn  AG01_3.18.onijn  AG01_3.2.onijn  AG01_3.23.onijn  AG01_3.24.onijn  AG01_3.26.onijn  AG01_3.31.onijn  AG01_3.35.onijn  AG01_3.36.onijn  AG01_3.37.onijn  AG01_3.38.onijn  AG01_3.41.onijn  AG01_3.47.onijn  AG01_3.48.onijn  AG01_3.49.onijn  AG01_3.52.onijn  AG01_3.53.onijn  AG01_3.53b.onijn  AG01_3.55.onijn  AG01_3.5a.onijn  AG01_3.5b.onijn  AG01_3.6a.onijn  AG01_3.7.onijn  AG01_3.8a.onijn  AG01_3.8b.onijn  AG01_4.30c.onijn  AProVE_04_IJCAR_1.onijn  AProVE_04_rta1.onijn  AProVE_04_rta2.onijn  AProVE_04_rta3.onijn  AProVE_08_log.onijn  AProVE_08_parting01_reverse.onijn  mscs_addition.onijn  mscs_example_11.onijn  mscs_example_18.onijn  (+2 more)
docs/: index.html
docs/hermes/: index.html
docs/hermes/Lists/: index.html
docs/hermes/Monad/: index.html
docs/hermes/Parser/: index.html
docs/hermes/Syntax/: index.html
docs/hermes/Z3env/: index.html
experiments/: AG01_3.33.onijn  AG01_3.42.onijn  AG01_3.5.onijn  AG01_3.6.onijn  AG01_3.6b.onijn  AProVE_04_fac.onijn  mscs_append.onijn  mscs_example_5.onijn  mscs_rev.onijn
src/lib/: dune
src/lib/config/: config.ml  config.mli  dune
src/lib/file/: dune  onijn.ml  onijn.mli
src/lib/gener/: dune  gener.ml  gener.mli
src/lib/interp/: dune  gener.ml  solve.ml
test/: dune  hermes.ml
(+88 files in other folders)
